objects/Stage_extend_Validate__c.object
<CustomObject>
    <fields>
        <fullName>Direct_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indirect_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indirect Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Driver__c</fullName>
        <label>Key Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Stage_ID__c</fullName>
        <label>Stage</label>
        <referenceTo>Release_Stage__c</referenceTo>
        <relationshipLabel>Stage extend Validate</relationshipLabel>
        <relationshipName>Stage_extend_Validate</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Stage extend Validate</label>
    <nameField>
        <displayFormat>SEV-{000000000}</displayFormat>
        <label>Stage extend name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage extend Validate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>